# Microlens_DF

./: .gitignore  README.md  pyproject.toml
cnas_test/: README.md  __init__.py
configs/: detect_default.yaml  detect_tile.yaml  yolo12m_sfe.yaml
doc/: CNAS测试准备清单_20260321.md  ChatGPT-眼镜镜片缺陷检测模型.md  GUI预发布架构说明_20260324.md  GitHub协作同步与大文件管理说明_20260324.md  后续工作准备_20260324_预发布与研发规划.md  暗场光学图像中眼镜片缺陷（划痕凹坑大面积裂纹）检测与分级的 AI 系统设计深度研究.md  暗场眼镜片缺陷检测中的分割模型选型与集成方案深度研究.md  暗场眼镜片缺陷检测系统提升方案研究报告.md  暗场镜片缺陷检测系统_测试大纲.docx  暗场镜片缺陷检测系统_测试报告_20260322.docx  眼镜镜片暗场缺陷智能检测技术深度调研.md  研究实验日志_20260213-0319_Phase01_预处理流水线.md  研究实验日志_20260320_Phase2AB_切图标注与基线训练.md  研究实验日志_20260321_Phase2C_重标注迭代与Stage4失败.md  研究实验日志_20260322_Phase3B_算法改进开发方案与实现.md  研究实验日志_20260322_推理流水线与测试准备.md  研究实验日志_20260325_Phase3C_分割实验结果分析与可视化核查.md  研究技术文档_20260324_预发布与算法演进.md  背景技术综合研究报告_v1.md  自动化迭代研发准备_20260324.md  软件系统说明文档_SDD_v1.md  项目执行文档_20260324_六个月实施复盘与排期.md  项目技术开发与执行综合文档_20260325.docx  项目技术开发与执行综合文档_20260325.html  项目技术开发与执行综合文档_20260325.odt
output/: README.md
research_loops/: README.md  detection_program.md  segmentation_program.md
scripts/: _debug_compare.py  analyze_scratch_fn.py  analyze_segmentation_results.py  audit_stage2_labels.py  build_tile_dataset.py  compare_experiments.py  compress_bmp.py  damage_augment.py  eval_utils.py  evaluate_sahi.py  fullimage_utils.py  generate_doc_figures.py  generate_weak_masks.py  infer_full_pipeline.py  infer_sahi.py  prepare_msd_segmentation.py  prepare_ssgd_yolo.py  register_custom_modules.py  relabel_merge_critical.py  review_fullimage.py  run_batch_preprocess_dataset.py  (+21 more)
(+71 files in other folders)
